modify config to multipage structure

--- a/views/github.ejs
+++ b/views/github.ejs
@@ -6,7 +6,8 @@
   <body>
     <% include header %>
     <h1><%= title %></h1>
-    
+
     <% include footer %>
   </body>
+  <script src="vendor/githubEntry.js"></script>
 </html>
