--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,5 +13,6 @@
       <li><a href="socketio">SocketIO</a></li>
     </ul>
     <% include footer %>
+    <script src="vendor/indexEntry.js"></script>
   </body>
 </html>
