add model folder, note model in memory

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <p>Welcome to <%= title %></p>
     <ul>
       <li><a href="github">Github Api</a></li>
-      <li><a href="crud">CRUD Todo</a></li>
+      <li><a href="note">CRUD Notes &amp; MongoDB</a></li>
       <li><a href="socketio">SocketIO</a></li>
     </ul>
     <% include footer %>
