add noteEntry js file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,12 @@
     <% include header %>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
     <ul>
       <li><a href="github">Github Api</a></li>
       <li><a href="note">CRUD Notes &amp; MongoDB</a></li>
