--- a/views/note/notedestroy.ejs
+++ b/views/note/notedestroy.ejs
@@ -17,6 +17,6 @@
     </form>
 
     <% include ../footer %>
-    <script src="vendor/indexEntry.js"></script>
+    <script src="/vendor/noteEntry.js"></script>
   </body>
 </html>
