--- a/views/note/noteview.ejs
+++ b/views/note/noteview.ejs
@@ -18,6 +18,6 @@
     <% } %>
 
     <% include ../footer %>
-    <script src="vendor/indexEntry.js"></script>
+    <script src="/vendor/noteEntry.js"></script>
   </body>
 </html>
