--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,1 +1,18 @@
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '571641609686912',
+      xfbml      : true,
+      version    : 'v2.7'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 <header>Here is header</header>
