--- a/views/note/index.ejs
+++ b/views/note/index.ejs
@@ -19,6 +19,6 @@
     <% } %>
 
     <% include ../footer %>
-    <script src="vendor/indexEntry.js"></script>
+    <script src="/vendor/noteEntry.js"></script>
   </body>
 </html>
