--- a/views/note/noteedit.ejs
+++ b/views/note/noteedit.ejs
@@ -28,6 +28,6 @@
     </form>
 
     <% include ../footer %>
-    <script src="vendor/indexEntry.js"></script>
+    <script src="/vendor/noteEntry.js"></script>
   </body>
 </html>
