--- a/views/note/noteHeader.ejs
+++ b/views/note/noteHeader.ejs
@@ -1,3 +1,4 @@
+<h2>Note with MongoDB</h2>
 <div class='navbar'>
   <p><a href='/'>Home</a> | <a href='/note'>Note Page</a>｜<a href='/note/add'>ADD Note</a></p>
 </div>
